src/test/ui/consts/const-match-pattern-arm.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:4:5
   |
LL |     Some(value) => true,
   |     ^^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:11:9
   |
LL |         Some(value) => true,
   |         ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0019`.
